--- a/estilo.css
+++ b/estilo.css
@@ -9,16 +9,17 @@
 
 
 body{
-    background-color: #35121B;
+    background-color: #481824;
 
 }
 
 caption{
-   font-size: larger; 
+   font-size: xx-large; 
    color: antiquewhite;
    font-family: "Roboto", sans-serif;
    font-weight: 700;
    font-style: normal;
+   margin: 2%;
 
  }
 
@@ -35,3 +36,14 @@ th{
     font-weight: 700;
     font-style: normal;
 }
+
+table {
+  width: auto;
+  margin: auto;
+}
+
+table th, table td {
+  border: 1px solid antiquewhite;
+  text-align: center;
+}
+
